# HTTPServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  users.json
include/client/: ClientConn.h  ClientLoop.h  FileHandler.h  HandlerFactory.h  HandlerRouter.h  HeartBeatHandler.h  JsonHandler.h  Utils.h
include/core/: Acceptor.h  Buffer.h  Channel.h  Connection.h  EchoServer.h  Epoll.h  EventLoop.h  InetAddress.h  SendTask.h  Socket.h  TcpServer.h  ThreadPool.h  Timestamp.h
include/http/: AuthorMiddleWare.h  DownloadController.h  HttpContext.h  HttpMessage.h  HttpRequest.h  HttpResponse.h  HttpRouter.h  HttpServer.h  LoginController.h  RegisterController.h  StaticFileController.h  TokenManager.h  UploadController.h  UserManager.h
include/mysql/: MySQLClient.h
include/redis/: RedisClient.h
src/: main_echo.cpp  main_http.cpp
src/client/: ClientConn.cpp  ClientLoop.cpp  FileHandler.cpp  HandlerFactory.cpp  HandlerRouter.cpp  HeartBeatHandler.cpp  JsonHandler.cpp  Utils.cpp  main_client.cpp
src/core/: Acceptor.cpp  Buffer.cpp  Channel.cpp  Connection.cpp  EchoServer.cpp  Epoll.cpp  EventLoop.cpp  InetAddress.cpp  Socket.cpp  TcpServer.cpp  ThreadPool.cpp  Timestamp.cpp
src/http/: AuthorMiddleWare.cpp  DownloadController.cpp  HttpContext.cpp  HttpMessage.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpRouter.cpp  HttpServer.cpp  LoginController.cpp  RegisterController.cpp  StaticFileController.cpp  TokenManager.cpp  UploadController.cpp  UserManager.cpp
src/mysql/: MySQLClient.cpp
src/redis/: RedisClient.cpp
src_concurrent/: Makefile  client_concurrent  client_concurrent.cpp  client_input  client_input.cpp  client_test  client_test.cpp  conc.sh  concconn.sh  test.sh
src_demo/: Makefile  demo11.cpp  demo12.cpp  tcpepolldemo.cpp
static/: index.html  test.txt
(+36 files in other folders)
